[lworld] Handle OOME in code cache when generating inline type adapters

XMLWordPrintable

      If there is insufficient space, the VM will crash with a segmentation fault although it stderrors that the CodeCache is full. Space should be checked beforehand and fail in a more user-friendly way. Please see the linked issue for more information.

            Assignee:
            Tobias Hartmann
            Reporter:
            Paul Hübner
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: