src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp
@@ -3906,6 +3906,9 @@ void SharedRuntime::montgomery_square(jint *a_ints, jint *n_ints,
 
 BufferedInlineTypeBlob* SharedRuntime::generate_buffered_inline_type_adapter(const InlineKlass* vk) {
   BufferBlob* buf = BufferBlob::create("inline types pack/unpack", 16 * K);
+  if (buf == nullptr) {
+    return nullptr;
+  }
   CodeBuffer buffer(buf);
   short buffer_locs[20];
   buffer.insts()->initialize_shared_locs((relocInfo*)buffer_locs,
